--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<!-- shade .. 라이브러리를 하나로 합쳐준다..? -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>1.4</version>
